--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
     <!-- slider link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
         integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
         integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
 <body class="bg-color">
+    <!--***** header *****-->
     <header
-        class="bg-img min-vh-100 d-flex justify-content-center align-items-center align-content-center flex-column position-relative">
+        class="bg-img min-vh-100 d-flex justify-content-center align-items-center align-content-center flex-column position-relative mb-190">
         <nav class="py-9 w-100">
             <div class="container">
                 <div class="d-flex align-items-center justify-content-between w-100">
@@ -32,24 +33,29 @@
                         <div class="font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">VICTORIAN
                             RESISTANCE</div>
                     </div>
-                    <ul id="name" class="d-flex mb-0 align-items-center gap-53 nav-link list-unstyled">
+                    <ul id="name"
+                        class="d-flex mb-0 align-items-center gap-53 nav-link list-unstyled justify-content-center">
                         <li><a class="text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
                                 href="/">PA02-SIERRA-11 SCOREBOARD</a></li>
                         <li><a class="text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
                                 href="/">SMURFLING GUIDE</a></li>
-                        <li><button
-                                class="nav-btn-1 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">LOGIN</button>
-                        </li>
-                        <li><button
-                                class="nav-btn-2 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
-                                UP</button></li>
+                        <!-- <li>
+                            <ul class="d-flex list-unstyled gap-20 mb-0 flex-column flex-lg-row">
+                                <li><button
+                                        class="nav-btn-1 font-family-first fw-bold fs-6 lh-23 text-center bg-color-infinite-night border-0">LOGIN</button>
+                                </li>
+                                <li><button
+                                        class="nav-btn-2 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
+                                        UP</button></li>
+                            </ul>
+                        </li> -->
                     </ul>
                     <ul class="d-flex list-unstyled gap-20 mb-0">
                         <li><button
-                                class="nav-btn-3 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">LOGIN</button>
+                                class="nav-btn-1 font-family-first fw-bold fs-6 lh-23 text-center bg-color-infinite-night border-0">LOGIN</button>
                         </li>
                         <li><button
-                                class="nav-btn-4 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
+                                class="nav-btn-2 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
                                 UP</button></li>
                     </ul>
                     <div onclick="navbarbtn()" class="z-5 d-block d-lg-none cursor-pointer">
@@ -63,91 +69,95 @@
         <div class="flex-grow-1 d-flex justify-content-center align-items-center">
             <div class="container">
                 <div class="d-flex justify-content-center">
-                    <div class="font-family-first fw-normal fs-2xl lh-118 color-white text-center max-w-607">JOIN THE
-                        VICTORIAN RESISTANCE</div>
+                    <h1 class="font-family-first fw-normal fs-2xl lh-118 color-white text-center max-w-607 z-1">JOIN THE
+                        VICTORIAN RESISTANCE</h1>
                 </div>
-                <div class="font-family-second fw-normal fs-6 lh-21 text-center color-white pt-2">Defend the world,
-                    protect what's yours. Join the Resistance!</div>
+                <h4 class="font-family-second fw-normal fs-6 lh-21 text-center color-white pt-2 z-1">Defend the world,
+                    protect what's yours. Join the Resistance!</h4>
                 <div class="d-flex justify-content-center">
                     <button
-                        class="join-btn font-family-first fw-bold fs-md lh-23 text-center color-sky-blue z-1 mt-68">JOIN
-                        THE
-                        RESISTANT</button>
+                        class="join-btn font-family-first fw-bold fs-md lh-23 text-center color-infinite z-1 mt-68 border-0 z-1">JOIN
+                        THE RESISTANT</button>
                 </div>
             </div>
         </div>
-        <img src="./assests/images/layer.png" alt="" class="position-absolute layer w-100">
+        <img src="./assests/images/layer.png" alt="layer-img" class="position-absolute layer w-100">
     </header>
-    <section class="min-vh-100 d-flex justify-content-center align-items-center align-content-center position-relative">
-        <img src="./assests/images/svg/triangle-svg.svg" alt="" class="position-absolute triangle-svg">
+    <!--***** section 1 *****-->
+    <section class="d-flex justify-content-center align-items-center align-content-center position-relative mb-178">
+        <img src="./assests/images/svg/triangle-svg.svg" alt="triangle-svg" class="position-absolute triangle-svg">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-5">
-                    <img src="./assests/images/mobile.png" alt="phone-svg" class="w-100 z-3">
+                <div class="col-12 col-lg-5 position-relative">
+                    <div class="d-flex justify-content-center">
+                        <img src="./assests/images/iphone.png" alt="phone-svg" class="z-1">
+                        <img src="./assests/images/iphone-background-layer.png" alt="iphone-background-layer"
+                            class="position-absolute phone-bg-layer w-100 d-lg-block d-none">
+                    </div>
                 </div>
-                <div class="col-12 col-lg-7">
-                    <div class="font-family-first fw-normal lh-71 fs-xl color-white z-5">ABOUT US</div>
-                    <div class="font-family-second fw-normal fs-6 lh-25 color-white z-5">Ingress is an augmented reality
-                        game that turns the world around you into a battle,
-                        with humankind's minds at stake.Play Ingress on the streets of Victoria. Meet agents who play in
-                        the areas you do and fight with them to protect humanity's freedom. Discover agents you can
-                        depend on to help you when you need assistance in the field. Download the mobile scanner app to
-                        discover thousands of portals around you. Buildings, historic landmarks and cultural
-                        points of interest become portals for you to fight for and defend from alien incursion.</div>
-                    <div class="font-family-second fw-normal fs-6 lh-25 color-white z-5">The Victorian Resistance has a
-                        long
-                        and proud history of teamwork, collaboration and
-                        most importantly, fun!
-                        By joining us, you'll have access to regular events so you can stock up on gear, regular
-                        operations so you can put your
-                        mark on the map, as well as help almost any time of the day or night.
-                        Joining the community benefits you and everyone else — it takes eight level 8 players to make a
-                        level 8 portal, and the
-                        easier it is to coordinate with people, the more easily you'll be able to gear up to take and
-                        hold your area.</div>
-                    <div class="d-md-flex align-items-center gap-30 mt-63 mb-24">
-                        <div class="d-flex align-items-center box bg-black">
-                            <img src="./assests/images/svg/apple-logo.svg" alt="apple-logo" class="pl-13">
-                            <div class="pl-10">
-                                <img src="./assests/images/svg/download-img.svg" alt="download-svg" class="pt-6">
-                                <img src="./assests/images/svg/app-store-img.svg" alt="app-store-svg"
-                                    class="mt-0 vertical-align pb-2">
-                            </div>
-                        </div>
-                        <img src="./assests/images/svg/google-play.svg" alt="google-play" class="mt-24">
+                <div class="col-12 col-lg-7 pt-5 pt-lg-0">
+                    <h2
+                        class="font-family-first fw-normal lh-71 fs-xl color-white d-flex d-lg-block justify-content-center z-2">
+                        ABOUT US</h2>
+                    <div class="d-flex d-lg-block justify-content-center">
+                        <p class="font-family-second fw-normal fs-6 lh-25 color-white max-w-627">Ingress is an augmented
+                            reality game that turns the world around you into a battle, with humankind's minds at stake.
+                            <br> Ingress on the streets of Victoria. Meet agents who play in the areas you do and fight
+                            with them to protect humanity's freedom. Discover agents you can depend on to help you when
+                            you need assistance in the field.<br> Download the mobile scanner app to discover thousands
+                            of portals around you. Buildings, historic landmarks and cultural points of interest become
+                            portals for you to fight for and defend from alien incursion.
+                        </p>
+                    </div>
+                    <div class="d-flex d-lg-block justify-content-center">
+                        <p class="font-family-second fw-normal fs-6 lh-25 color-white max-w-627">The Victorian
+                            Resistance has a long and proud history of teamwork, collaboration and most importantly,
+                            fun! <br>By joining us, you'll have access to regular events so you can stock up on gear,
+                            regular operations so you can put your mark on the map, as well as help almost any time of
+                            the day or night. <br>Joining the community benefits you and everyone else — it takes eight
+                            level 8 players to make a level 8 portal, and the easier it is to coordinate with people,
+                            the more easily you'll be able to gear up to take and hold your area.</p>
+                    </div>
+                    <div class="d-flex align-items-center gap-30 mt-63 justify-content-center justify-content-lg-start">
+                        <a class="z-1" href="">
+                            <img src="./assests/images/svg/app-store-svg.svg" alt="app-store"
+                                class="app-store w-100"></a>
+                        <a href="">
+                            <img src="./assests/images/svg/google-play-svg.svg" alt="google-play"
+                                class="app-store w-100"></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="min-vh-100 d-flex justify-content-center align-items-center align-content-center flex-column">
+    <!--***** slider *****-->
+    <section class="d-flex justify-content-center align-items-center align-content-center flex-column mb-139">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <div class="font-family-first fw-normal lh-71 text-center color-white fs-xl max-w-632">Your world is the
-                    game
-                    board, and
-                    your mind is at stake.</div>
-            </div>
-            <div class="d-flex justify-content-center">
-                <div class="font-family-second fw-normal fs-6 lh-21 text-center color-white max-w-516 mt-17">At the heart of
-                    Ingress is a
-                    desire to bring people together through exploration and teamwork.
-                </div>
+                <h2 class="font-family-first fw-normal lh-71 text-center color-white fs-xl max-w-632">Your world is the
+                    game board, and your mind is at stake.</h2>
             </div>
         </div>
-        <!-- <div class="slider">
-            <div class="card">
-                <img src="./assests/images/slider-img-1.png" alt="" class="w-100 fs-1">
+        <div class="d-flex justify-content-center">
+            <p class="font-family-second fw-normal fs-6 lh-21 text-center color-white max-w-516 mt-17 px-12">At the
+                heart of Ingress is a desire to bring people together through exploration and teamwork.
+            </p>
+        </div>
+        <div class="slider w-100 mt-51">
+            <div class="slider-card w-100">
+                <img src="./assests/images/slider-img-1.png" alt="slider-img-1" class="w-100">
             </div>
-            <div class="card">
-                <img src="./assests/images/slider-img-2.png" alt="" class="w-100">
+            <div class="slider-card w-100">
+                <img src="./assests/images/slider-img-2.png" alt="slider-img-2" class="w-100">
             </div>
-            <div class="card">
-                <img src="./assests/images/slider-img-3.png" alt="" class="w-100">
+            <div class="slider-card w-100">
+                <img src="./assests/images/slider-img-3.png" alt="slider-img-3" class="w-100">
             </div>
-        </div> -->
+            <div class="slider-card w-100">
+                <img src="./assests/images/slider-img-2.png" alt="slider-img-2" class="w-100">
+            </div>
+        </div>
     </section>
-
     <!--***** bootstrap link *****-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
