section-4 static done

--- a/index.html
+++ b/index.html
@@ -260,6 +260,20 @@
             <div class="line"></div>
         </div>
     </section>
+    <!--***** section 4 *****-->
+    <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100">
+        <div class="container">
+            <div class="box position-relative">
+                <!-- <img src="./assests/images/svg/iphone-2.svg" alt="" class="w-100 d-xl-none"> -->
+                <div class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</div>
+                <div class="font-family-second fw-normal fs-sm lh-21 color-white max-w-582 pt-10">Volutpat etiam
+                    tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
+                    Mauris sit hendrerit interdum neque mattis enim egenisi.</div>
+                <button class="join-btn-2 fw-bold font-family-first fs-sm lh-23 mt-60">JOIN NOW</button>
+                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img" class="position-absolute phone-img">
+            </div>
+        </div>
+    </section>
     <!--***** bootstrap link *****-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
