--- a/index.html
+++ b/index.html
@@ -261,16 +261,24 @@
         </div>
     </section>
     <!--***** section 4 *****-->
-    <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100">
+    <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100 mb-32">
         <div class="container">
             <div class="box position-relative">
-                <!-- <img src="./assests/images/svg/iphone-2.svg" alt="" class="w-100 d-xl-none"> -->
-                <div class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</div>
-                <div class="font-family-second fw-normal fs-sm lh-21 color-white max-w-582 pt-10">Volutpat etiam
-                    tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
-                    Mauris sit hendrerit interdum neque mattis enim egenisi.</div>
-                <button class="join-btn-2 fw-bold font-family-first fs-sm lh-23 mt-60">JOIN NOW</button>
-                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img" class="position-absolute phone-img">
+                <div class="d-flex justify-content-center justify-content-lg-start">
+                    <img src="./assests/images/svg/iphone-2.svg" alt="" class="iphone w-100 d-lg-none ">
+                </div>
+                <div class="d-flex justify-content-center justify-content-lg-start">
+                    <div class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</div>
+                </div>
+                <div class="d-flex justify-content-center justify-content-lg-start">
+                    <div class="font-family-second fw-normal fs-sm lh-21 color-white max-w-582 pt-10 text-center text-lg-start">Volutpat etiam
+                        tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
+                        Mauris sit hendrerit interdum neque mattis enim egenisi.</div>
+                </div>
+                <div class="d-flex justify-content-center justify-content-lg-start">
+                    <button class="join-btn-2 fw-bold font-family-first fs-sm lh-23 mt-60">JOIN NOW</button>
+                </div>
+                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img" class="position-absolute phone-img d-none d-lg-block">
             </div>
         </div>
     </section>
