--- a/index.html
+++ b/index.html
@@ -261,27 +261,62 @@
         </div>
     </section>
     <!--***** section 4 *****-->
-    <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100 mb-32">
+    <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100 mb-32 position-relative">
+        <img src="./assests/images/svg/triangle-svg.svg" alt="triangle-img" class="position-absolute triangle-img z-n1">
         <div class="container">
             <div class="box position-relative">
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <img src="./assests/images/svg/iphone-2.svg" alt="" class="iphone w-100 d-lg-none ">
                 </div>
                 <div class="d-flex justify-content-center justify-content-lg-start">
-                    <div class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</div>
+                    <h2 class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</h2>
                 </div>
                 <div class="d-flex justify-content-center justify-content-lg-start">
-                    <div class="font-family-second fw-normal fs-sm lh-21 color-white max-w-582 pt-10 text-center text-lg-start">Volutpat etiam
-                        tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
-                        Mauris sit hendrerit interdum neque mattis enim egenisi.</div>
+                    <p
+                        class="font-family-second fw-normal fs-sm lh-21 color-white max-w-582 pt-10 text-center text-lg-start">
+                        Volutpat etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
+                        Mauris sit hendrerit interdum neque mattis enim egenisi.</p>
                 </div>
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <button class="join-btn-2 fw-bold font-family-first fs-sm lh-23 mt-60">JOIN NOW</button>
                 </div>
-                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img" class="position-absolute phone-img d-none d-lg-block">
+                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img"
+                    class="position-absolute phone-img d-none d-lg-block">
             </div>
         </div>
     </section>
+    <!--***** footer *****-->
+    <footer class="bg-layer">
+        <div class="container">
+            <div class="d-flex justify-content-center">
+                <img src="./assests/images/svg/footer-logo.svg" alt="">
+            </div>
+            <div class="d-flex justify-content-center">
+                <p
+                    class="font-family-second fw-normal fs-sm lh-21 text-center color-white opacity-70 max-width-810 pt-4">
+                    Volutpat etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum.
+                    Mauris sit hendrerit interdum neque mattis enim eget. Quasi.</p>
+            </div>
+            <div class="d-sm-flex gap-63 justify-content-center pt-52">
+                <div class="d-flex justify-content-center">
+                    <!-- <h3 class="font-family-first fw-normal lh-23 fs-sm color-white">PA02-SIERRA-11 SCOREBOARD</h3> -->
+                    <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
+                        href="">PA02-SIERRA-11 SCOREBOARD</a>
+
+                </div>
+                <div class="d-flex justify-content-center">
+                    <!-- <h3 class="font-family-first fw-normal lh-23 fs-sm color-white">SMURFLING GUIDE</h3> -->
+                    <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
+                        href="">SMURFLING GUIDE</a>
+                </div>
+            </div>
+        </div>
+        <div class="line-2 w-100 mt-60"></div>
+        <div class="d-flex justify-content-center pt-4 pb-36">
+            <h4 class="font-family-second fw-normal fs-small lh-16 text-center  color-white opacity-70 max-width-195">
+                ©copyright2025victorianresistance</h4>
+        </div>
+    </footer>
     <!--***** bootstrap link *****-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
