--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q1.</span><span
-                            class="font-family-first fw-bold color-white fs-md lh-29">
-                            Aliquam magnis sed arcu rutrum quisque sed aliquet vestibulum?</span>
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
+                        <span class="font-family-first fw-bold color-white fs-md lh-29">
+                            Q1. Aliquam magnis sed arcu rutrum quisque sed aliquet vestibulum?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
@@ -198,9 +198,9 @@
                 <h2 class="accordion-header" id="flush-headingTwo">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q2.</span><span
-                            class="font-family-first fw-bold color-white fs-md lh-29">A semper enim quis non aenean
-                            adipiscing lectus neque?</span>
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
+                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q2. A semper enim quis non
+                            aenean adipiscing lectus neque?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
@@ -218,12 +218,9 @@
                 <h2 class="accordion-header" id="flush-headingThree">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q3.</span><span
-                            class="font-family-first fw-bold color-white fs-md lh-29">Consectetur faucibus velit aliquam
-                            dictum vestibulum
-                            sollicitudinlla
-                            dapibus consectetur
-                            suscipit1?</span>
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
+                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q3. Consectetur faucibus velit
+                            aliquam dictum vestibulum sollicitudinlla dapibus consectetur suscipit1?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
@@ -241,10 +238,9 @@
                 <h2 class="accordion-header" id="flush-headingFour">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                        <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q4.</span><span
-                            class="font-family-first fw-bold color-white fs-md lh-29">Volutpat cras natoque
-                            suscipit in semisus
-                            euismod?</span>
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
+                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q4. Volutpat cras natoque
+                            suscipit in semisus euismod?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
@@ -304,7 +300,7 @@
                         href="">PA02-SIERRA-11 SCOREBOARD</a>
 
                 </div>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center pt-3 pt-sm-0">
                     <!-- <h3 class="font-family-first fw-normal lh-23 fs-sm color-white">SMURFLING GUIDE</h3> -->
                     <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
                         href="">SMURFLING GUIDE</a>
