--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
         </div>
     </section>
     <!--***** footer *****-->
-    <footer class="bg-layer">
+    <footer class="bg-img-3">
         <div class="container">
             <div class="d-flex justify-content-center">
                 <img src="./assests/images/svg/footer-logo.svg" alt="">
@@ -295,13 +295,11 @@
             </div>
             <div class="d-sm-flex gap-63 justify-content-center pt-52">
                 <div class="d-flex justify-content-center">
-                    <!-- <h3 class="font-family-first fw-normal lh-23 fs-sm color-white">PA02-SIERRA-11 SCOREBOARD</h3> -->
                     <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
                         href="">PA02-SIERRA-11 SCOREBOARD</a>
 
                 </div>
                 <div class="d-flex justify-content-center pt-3 pt-sm-0">
-                    <!-- <h3 class="font-family-first fw-normal lh-23 fs-sm color-white">SMURFLING GUIDE</h3> -->
                     <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
                         href="">SMURFLING GUIDE</a>
                 </div>
