--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
             <div class="font-family-first fw-normal fs-xl lh-71 text-center color-white">FAQs</div>
             <div class="d-flex justify-content-center">
                 <div class="font-family-second fw-normal fs-sm lh-21 text-center color-white max-w-680 pt-12">Porta
-                    maecenas
-                    consequat sed neque gravida eleifend fusce cursus amet. Turpis enim sed
+                    maecenas consequat sed neque gravida eleifend fusce cursus amet. Turpis enim sed
                     pharetra tempus ullamcorper mauris mauris facilisis.</div>
             </div>
         </div>
@@ -185,11 +184,10 @@
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
-                        etiam
-                        tincidunt leo amet pulvinar. Adipiscing vestibulum enim
-                        ornare vestibulum. Mauris sit hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget
-                        nisl tortor semper elit. Id aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis
-                        dictum. Ac viverra auctor a vitae dolor nisi.
+                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
+                        hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
+                        aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
+                        vitae dolor nisi.
                     </div>
                 </div>
             </div>
@@ -206,10 +204,10 @@
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
-                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim
-                        ornare vestibulum. Mauris sit hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget
-                        nisl tortor semper elit. Id aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis
-                        dictum. Ac viverra auctor a vitae dolor nisi.
+                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
+                        hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
+                        aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
+                        vitae dolor nisi.
                     </div>
                 </div>
             </div>
@@ -226,10 +224,10 @@
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
-                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim
-                        ornare vestibulum. Mauris sit hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget
-                        nisl tortor semper elit. Id aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis
-                        dictum. Ac viverra auctor a vitae dolor nisi.
+                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
+                        hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
+                        aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
+                        vitae dolor nisi.
                     </div>
                 </div>
             </div>
@@ -246,10 +244,10 @@
                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                     data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
-                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim
-                        ornare vestibulum. Mauris sit hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget
-                        nisl tortor semper elit. Id aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis
-                        dictum. Ac viverra auctor a vitae dolor nisi.
+                        etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
+                        hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
+                        aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
+                        vitae dolor nisi.
                     </div>
                 </div>
             </div>
