--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assests/images/layer.png" alt="layer-img" class="position-absolute layer w-100">
+        <img src="./assests/images/png/layer.png" alt="layer-img" class="position-absolute layer w-100">
     </header>
     <!--***** section 1 *****-->
     <section class="d-flex justify-content-center align-items-center align-content-center position-relative mb-178">
@@ -90,8 +90,8 @@
             <div class="row">
                 <div class="col-12 col-lg-5 position-relative">
                     <div class="d-flex justify-content-center">
-                        <img src="./assests/images/iphone.png" alt="phone-svg" class="z-1">
-                        <img src="./assests/images/iphone-background-layer.png" alt="iphone-background-layer"
+                        <img src="./assests/images/png/iphone.png" alt="phone-svg" class="z-1">
+                        <img src="./assests/images/png/iphone-background-layer.png" alt="iphone-background-layer"
                             class="position-absolute phone-bg-layer w-100 d-lg-block d-none">
                     </div>
                 </div>
@@ -145,16 +145,16 @@
         </div>
         <div class="slider w-100 mt-51">
             <div class="slider-card w-100">
-                <img src="./assests/images/slider-img-1.png" alt="slider-img-1" class="w-100">
+                <img src="./assests/images/png/slider-img-1.png" alt="slider-img-1" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/slider-img-2.png" alt="slider-img-2" class="w-100">
+                <img src="./assests/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/slider-img-3.png" alt="slider-img-3" class="w-100">
+                <img src="./assests/images/png/slider-img-3.png" alt="slider-img-3" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/slider-img-2.png" alt="slider-img-2" class="w-100">
+                <img src="./assests/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
             </div>
         </div>
     </section>
@@ -322,7 +322,7 @@
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--***** JS link *****-->
-    <script src="./js/app.js"></script>
+    <script src="./assests/js/app.js"></script>
 </body>
 
 </html>
