remove padding from accordion button

--- a/index.html
+++ b/index.html
@@ -176,9 +176,13 @@
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
-                        <span class="font-family-first fw-bold color-white fs-md lh-29">
-                            Q1. Aliquam magnis sed arcu rutrum quisque sed aliquet vestibulum?</span>
+                        <div class="font-family-first fw-bold color-white fs-md lh-29">
+                            <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q1.</span>
+                            Aliquam magnis sed arcu rutrum quisque sed aliquet vestibulum?
+                        </div>
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29"> -->
+
+                        <!-- </span> -->
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
