change assets folder name

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                         <li><a class="text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
                                 href="/">SMURFLING GUIDE</a></li>
                         <li class="d-lg-none">
-                            <ul class="d-flex list-unstyled gap-20 mb-0 flex-column flex-lg-row">
+                            <ul class="d-flex list-unstyled gap-20 mb-0">
                                 <li><button
-                                        class="nav-btn-1 font-family-first fw-bold fs-6 lh-23 text-center bg-color-infinite-night border-0">LOGIN</button>
+                                        class="nav-btn-1 font-family-first fw-bold fs-6 lh-23 text-center border-0">LOGIN</button>
                                 </li>
                                 <li><button
                                         class="nav-btn-2 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
@@ -52,13 +52,13 @@
                     </ul>
                     <ul class="d-flex list-unstyled gap-20 mb-0">
                         <li><button
-                                class="nav-btn-3 font-family-first fw-bold fs-6 lh-23 text-center bg-color-infinite-night border-0">LOGIN</button>
+                                class="nav-btn-3 font-family-first fw-bold fs-6 lh-23 text-center border-0">LOGIN</button>
                         </li>
                         <li><button
                                 class="nav-btn-4 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue">SIGN
                                 UP</button></li>
                     </ul>
-                    <div onclick="navbarbtn()" class="z-5 d-block d-lg-none cursor-pointer">
+                    <div onclick="navbarbtn()" class="z-5 d-lg-none cursor-pointer">
                         <span class="menu-lines bg-light" id="rotates"></span>
                         <span class="menu-lines bg-light" id="transparent"></span>
                         <span class="menu-lines bg-light" id="rotates2"></span>
@@ -76,7 +76,7 @@
                     protect what's yours. Join the Resistance!</h4>
                 <div class="d-flex justify-content-center">
                     <button
-                        class="join-btn font-family-first fw-bold fs-md lh-23 text-center color-infinite z-1 mt-68 border-0 z-1">JOIN
+                        class="join-btn font-family-first fw-bold fs-md lh-23 text-center z-1 mt-68 border-0 z-1">JOIN
                         THE RESISTANT</button>
                 </div>
             </div>
