add hover on btn and nav link

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VICTORIAN-PAGE</title>
-    <link rel="shortcut icon" href="./assests/images/svg/navbar-logo.svg" type="image/x-icon">
+    <title>VICTORIAN RESISTANCE</title>
+    <link rel="shortcut icon" href="./assets/images/svg/navbar-logo.svg" type="image/x-icon">
     <!--***** css link *****-->
-    <link rel="stylesheet" href="./assests/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!--***** bootstrap link *****-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -29,15 +29,15 @@
             <div class="container">
                 <div class="d-flex align-items-center justify-content-between w-100">
                     <div class="d-flex align-items-center gap-23">
-                        <img src="./assests/images/svg/navbar-logo.svg" alt="navbar-logo" class="cursor-pointer">
-                        <a class="font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue text-decoration-none"
+                        <img src="./assets/images/svg/navbar-logo.svg" alt="navbar-logo" class="cursor-pointer">
+                        <a class="text-hover-2 font-family-first fw-bold fs-6 lh-23 text-center color-sky-blue text-decoration-none"
                             href="">VICTORIAN RESISTANCE</a>
                     </div>
                     <ul id="name"
                         class="d-flex mb-0 align-items-center gap-53 nav-link list-unstyled justify-content-center">
-                        <li><a class="text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
+                        <li><a class="text-hover text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
                                 href="/">PA02-SIERRA-11 SCOREBOARD</a></li>
-                        <li><a class="text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
+                        <li><a class="text-hover text-decoration-none font-family-first fw-bold fs-6 lh-23 text-center color-white"
                                 href="/">SMURFLING GUIDE</a></li>
                         <li class="d-lg-none">
                             <ul class="d-flex list-unstyled gap-20 mb-0">
@@ -81,17 +81,17 @@
                 </div>
             </div>
         </div>
-        <img src="./assests/images/png/layer.png" alt="layer-img" class="position-absolute layer w-100">
+        <img src="./assets/images/png/layer.png" alt="layer-img" class="position-absolute layer w-100">
     </header>
     <!--***** section 1 *****-->
     <section class="d-flex justify-content-center align-items-center align-content-center position-relative mb-178">
-        <img src="./assests/images/svg/triangle-svg.svg" alt="triangle-svg" class="position-absolute triangle-svg">
+        <img src="./assets/images/svg/triangle-svg.svg" alt="triangle-svg" class="position-absolute triangle-svg">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-5 position-relative">
                     <div class="d-flex justify-content-center">
-                        <img src="./assests/images/png/iphone.png" alt="phone-svg" class="z-1">
-                        <img src="./assests/images/png/iphone-background-layer.png" alt="iphone-background-layer"
+                        <img src="./assets/images/png/iphone.png" alt="phone-svg" class="z-1">
+                        <img src="./assets/images/png/iphone-background-layer.png" alt="iphone-background-layer"
                             class="position-absolute phone-bg-layer w-100 d-lg-block d-none">
                     </div>
                 </div>
@@ -120,10 +120,10 @@
                     </div>
                     <div class="d-flex align-items-center gap-30 mt-63 justify-content-center justify-content-lg-start">
                         <a class="z-1" href="https://www.apple.com/in/app-store/" target="_blank">
-                            <img src="./assests/images/svg/app-store-svg.svg" alt="app-store"
+                            <img src="./assets/images/svg/app-store-svg.svg" alt="app-store"
                                 class="app-store w-100"></a>
                         <a href="https://play.google.com/store/apps?hl=en_IN&pli=1" target="_blank">
-                            <img src="./assests/images/svg/google-play-svg.svg" alt="google-play"
+                            <img src="./assets/images/svg/google-play-svg.svg" alt="google-play"
                                 class="app-store w-100"></a>
                     </div>
                 </div>
@@ -145,23 +145,23 @@
         </div>
         <div class="slider w-100 mt-51">
             <div class="slider-card w-100">
-                <img src="./assests/images/png/slider-img-1.png" alt="slider-img-1" class="w-100">
+                <img src="./assets/images/png/slider-img-1.png" alt="slider-img-1" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
+                <img src="./assets/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/png/slider-img-3.png" alt="slider-img-3" class="w-100">
+                <img src="./assets/images/png/slider-img-3.png" alt="slider-img-3" class="w-100">
             </div>
             <div class="slider-card w-100">
-                <img src="./assests/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
+                <img src="./assets/images/png/slider-img-2.png" alt="slider-img-2" class="w-100">
             </div>
         </div>
     </section>
     <!--***** accordion *****-->
     <section
         class="section-3 d-flex justify-content-center align-items-center align-content-center flex-column mb-200 position-relative">
-        <img src="./assests/images/svg/left-triangle-img.svg" alt="triangle-svg"
+        <img src="./assets/images/svg/left-triangle-img.svg" alt="triangle-svg"
             class="left-triangle position-absolute w- 100">
         <div class="container">
             <div class="font-family-first fw-normal fs-xl lh-71 text-center color-white">FAQs</div>
@@ -176,13 +176,10 @@
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <div class="font-family-first fw-bold color-white fs-md lh-29">
-                            <span class="font-family-first fw-bold color-white fs-md lh-29 text-center">Q1.</span>
-                            Aliquam magnis sed arcu rutrum quisque sed aliquet vestibulum?
-                        </div>
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29"> -->
-
-                        <!-- </span> -->
+                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29"> </span> -->
+                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q1. Aliquam magnis sed arcu
+                            rutrum quisque sed aliquet vestibulum?
+                        </span>
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
@@ -260,11 +257,11 @@
     </section>
     <!--***** section 4 *****-->
     <section class="bg-img-2 d-flex align-items-center justify-content-center min-vh-100 mb-32 position-relative">
-        <img src="./assests/images/svg/triangle-svg.svg" alt="triangle-img" class="position-absolute triangle-img z-n1">
+        <img src="./assets/images/svg/triangle-svg.svg" alt="triangle-img" class="position-absolute triangle-img z-n1">
         <div class="container">
             <div class="box position-relative">
                 <div class="d-flex justify-content-center justify-content-lg-start">
-                    <img src="./assests/images/svg/iphone-2.svg" alt="" class="iphone w-100 d-lg-none ">
+                    <img src="./assets/images/svg/iphone-2.svg" alt="" class="iphone w-100 d-lg-none ">
                 </div>
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <h2 class="font-family-first fw-normal fs-xl lh-71 color-white">JOIN THE RESISTANCE</h2>
@@ -278,7 +275,7 @@
                 <div class="d-flex justify-content-center justify-content-lg-start">
                     <button class="join-btn-2 fw-bold font-family-first fs-sm lh-23 mt-60">JOIN NOW</button>
                 </div>
-                <img src="./assests/images/svg/iphone-2.svg" alt="phone-img"
+                <img src="./assets/images/svg/iphone-2.svg" alt="phone-img"
                     class="position-absolute phone-img d-none d-lg-block">
             </div>
         </div>
@@ -287,7 +284,7 @@
     <footer class="bg-img-3">
         <div class="container">
             <div class="d-flex justify-content-center">
-                <img src="./assests/images/svg/footer-logo.svg" alt="">
+                <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="cursor-pointer">
             </div>
             <div class="d-flex justify-content-center">
                 <p
@@ -297,12 +294,12 @@
             </div>
             <div class="d-sm-flex gap-63 justify-content-center pt-52">
                 <div class="d-flex justify-content-center">
-                    <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
+                    <a class="text-hover text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
                         href="">PA02-SIERRA-11 SCOREBOARD</a>
 
                 </div>
                 <div class="d-flex justify-content-center pt-3 pt-sm-0">
-                    <a class="text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
+                    <a class="text-hover text-decoration-none font-family-first fw-normal lh-23 fs-sm color-white"
                         href="">SMURFLING GUIDE</a>
                 </div>
             </div>
@@ -326,7 +323,7 @@
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!--***** JS link *****-->
-    <script src="./assests/js/app.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
