change in accordion alignment

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <div class="col-12 col-lg-5 position-relative">
                     <div class="d-flex justify-content-center">
                         <img src="./assets/images/png/iphone.png" alt="phone-svg" class="z-1">
-                        <img src="./assets/images/png/iphone-background-layer.png" alt="iphone-background-layer"
-                            class="position-absolute phone-bg-layer w-100 d-lg-block d-none">
+                        <img src="./assets/images/png/iphone-bg-layer.png" alt="iphone-background-layer"
+                            class="position-absolute phone-bg-layer z-n1 d-lg-block d-none">
                     </div>
                 </div>
                 <div class="col-12 col-lg-7 pt-5 pt-lg-0 z-1">
@@ -176,15 +176,14 @@
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29"> </span> -->
-                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q1. Aliquam magnis sed arcu
-                            rutrum quisque sed aliquet vestibulum?
-                        </span>
+                        <span class="font-family-first fw-bold color-white fs-md lh-29 align-items-start d-flex"> <span
+                                class="pr-13">Q1.</span>Aliquam magnis sed arcu rutrum quisque sed aliquet
+                            vestibulum?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
+                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-830">Volutpat
                         etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
                         hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
                         aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
@@ -197,14 +196,13 @@
                 <h2 class="accordion-header" id="flush-headingTwo">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
-                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q2. A semper enim quis non
-                            aenean adipiscing lectus neque?</span>
+                        <span class="font-family-first fw-bold color-white fs-md lh-29 align-items-start d-flex"> <span
+                                class="pr-13">Q2.</span>A semper enim quis non aenean adipiscing lectus neque?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
+                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-830">Volutpat
                         etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
                         hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
                         aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
@@ -217,14 +215,14 @@
                 <h2 class="accordion-header" id="flush-headingThree">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
-                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q3. Consectetur faucibus velit
-                            aliquam dictum vestibulum sollicitudinlla dapibus consectetur suscipit1?</span>
+                        <span class="font-family-first fw-bold color-white fs-md lh-29 align-items-start d-flex"> <span
+                                class="pr-13">Q3.</span>Consectetur faucibus velit aliquam dictum vestibulum
+                            sollicitudinlla dapibus consectetur suscipit1?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
+                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-830">Volutpat
                         etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
                         hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
                         aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
@@ -237,14 +235,13 @@
                 <h2 class="accordion-header" id="flush-headingFour">
                     <button class="accordion-button collapsed bg-transparent" type="button" data-bs-toggle="collapse"
                         data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                        <!-- <span class="font-family-first fw-bold color-white fs-md lh-29 text-center"></span> -->
-                        <span class="font-family-first fw-bold color-white fs-md lh-29">Q4. Volutpat cras natoque
-                            suscipit in semisus euismod?</span>
+                        <span class="font-family-first fw-bold color-white fs-md lh-29 align-items-start d-flex"> <span
+                                class="pr-13">Q4.</span>Volutpat cras natoque suscipit in semisus euismod?</span>
                     </button>
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                     data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-810">Volutpat
+                    <div class="accordion-body font-family-second fw-normal fs-sm lh-21 color-white max-w-830">Volutpat
                         etiam tincidunt leo amet pulvinar. Adipiscing vestibulum enim ornare vestibulum. Mauris sit
                         hendrerit interdum neque mattis enim eget. Quam lorem id nisi eget nisl tortor semper elit. Id
                         aliquam morbi ac potenti. Egestas ac tellus amet suspendisse mattis dictum. Ac viverra auctor a
